--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
-    // https://mvnrepository.com/artifact/org.apache.nutch/nutch
-	compile group: 'org.apache.nutch', name: 'nutch', version: '2.4'
+	// https://mvnrepository.com/artifact/org.jsoup/jsoup
+	compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
 }
